salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/Invoice_Line_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Snapshot</label>
    <nameField>
        <displayFormat>ILS-{0000000000}</displayFormat>
        <label>Invoice Line Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>