salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Line Snapshots</relationshipLabel>
    <relationshipName>Invoice_Line_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>