salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Account_Client_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Client_Category__c</fullName>
    <label>Account Client Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>