salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Account_Collector_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Account_Collector_Assigned__c</fullName>
    <label>Account Collector Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>