salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Bad_Debt_0_90__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_0_90__c</fullName>
    <formula>Balance_0_90__c * 0.01</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Debt 0-90</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>