salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Bad_Debt_181_365__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_181_365__c</fullName>
    <formula>Balance_181_365__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Debt 181-365</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>