salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Bad_Debt_366_730__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_366_730__c</fullName>
    <formula>Balance_366_730__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Debt 366-730</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>