salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Bad_Debt_731_Plus__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_731_Plus__c</fullName>
    <formula>Balance_731_Plus__c * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Debt 731 Plus</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>