salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Bad_Debt_Total__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_Total__c</fullName>
    <formula>Bad_Debt_0_90__c + Bad_Debt_91_180__c + Bad_Debt_181_365__c + Bad_Debt_366_730__c + Bad_Debt_731_Plus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Debt Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>