salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Balance_0_90__c.field-meta.xml
<CustomField>
    <fullName>Balance_0_90__c</fullName>
    <formula>IF(AND(Days_Since_Invoice_Due_Date__c &gt;= 0, Days_Since_Invoice_Due_Date__c &lt;= 90), Line_Balance__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance 0-90</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>