salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Balance_361_Plus__c.field-meta.xml
<CustomField>
    <fullName>Balance_361_Plus__c</fullName>
    <formula>IF(Days_Since_Invoice_Due_Date__c &gt; 360, Line_Balance__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance 361 Plus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>