salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Days_Since_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Invoice_Due_Date__c</fullName>
    <label>Days Since Invoice Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>