salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <label>Invoice ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>