salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Line_AR_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_AR_Status__c</fullName>
    <label>Line AR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>