salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Line_Credits__c.field-meta.xml
<CustomField>
    <fullName>Line_Credits__c</fullName>
    <label>Line Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>