salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Line_Debit_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Debit_Account_Number__c</fullName>
    <label>Line Debit Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>