salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Line_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_End_Date__c</fullName>
    <label>Line End Date</label>
    <type>Date</type>
</CustomField>