salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_ID__c</fullName>
    <label>Line ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>