salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Line_Negative_Line_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Line_Negative_Line_Conversion__c</fullName>
    <label>Line Negative Line Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>