salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Line_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Line_Subtotal__c</fullName>
    <label>Line Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>