salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Line_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Tax_Amount__c</fullName>
    <label>Line Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>