salesforce-main/src/main/default/objects/Invoice_Line_Snapshot__c/fields/Reporting_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Legal_Entity_Name__c</fullName>
    <label>Reporting Legal Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>